@@ -1,3 +1,8 @@
+2002-02-15  Richard Henderson  <rth@redhat.com>
+
+	* elf64-alpha.c (elf64_alpha_relocate_section) [BRSGP]: A target
+	section with no got matches any got.  Simplify error generaion.
+
 2002-02-14  Alan Modra  <amodra@bigpond.net.au>
 
 	* elf.c (elf_fake_sections): Use SHT_NOBITS when SEC_NEVER_LOAD.
